--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "demo",
-  "version": "0.0.0",
+  "name": "feedback-api",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "test": "mocha"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "mocha": "^5.1.1",
+    "nodemon": "^1.18.3",
     "supertest": "^3.0.0"
   }
 }
