--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "test": "mocha"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "debug": "^3.1.0",
+    "express": "^4.16.3",
+    "helmet": "^3.13.0",
+    "http-errors": "^1.7.0",
+    "morgan": "^1.9.0",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
-    "mocha": "^5.1.1",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
-    "supertest": "^3.0.0"
+    "supertest": "^3.1.0"
   }
 }
