--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "http-errors": "^1.7.0",
+    "lokijs": "^1.5.5",
     "morgan": "^1.9.0",
     "pug": "^2.0.3"
   },
