--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,11 @@ stages:
   image: docker:stable
   before_script:
     - docker info
+    - |
+      echo "${CI_JOB_TOKEN}" | docker login \
+        --username gitlab-ci-token \
+        --password-stdin \
+        registry.gitlab.com
     - docker run -d --name db arminc/clair-db:latest
     - docker run -p 6060:6060 --link db:postgres -d --name clair arminc/clair-local-scan:v2.0.1
     - apk add -U curl ca-certificates
@@ -111,12 +116,12 @@ stages:
   image: docker:stable
   before_script:
     - docker info
-    - docker pull "registry.gitlab.com/${CI_PROJECT_PATH}/${IMAGE_ARCH}:${CI_COMMIT_SHA}"
     - |
       echo "${CI_JOB_TOKEN}" | docker login \
         --username gitlab-ci-token \
         --password-stdin \
         registry.gitlab.com
+    - docker pull "registry.gitlab.com/${CI_PROJECT_PATH}/${IMAGE_ARCH}:${CI_COMMIT_SHA}"
     - |
       echo "${DOCKER_PASSWORD}" | docker login \
         --username "${DOCKER_LOGIN}" \
