--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "http-errors": "^1.7.1",
-    "lokijs": "^1.5.5",
     "morgan": "^1.9.1",
+    "nedb": "^1.8.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
