:rocket: Disable shellcheck

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ variables:
   PREFLIGHT_HADOLINT: "true"
   PREFLIGHT_JSONLINT: "true"
   PREFLIGHT_MARKDOWNLINT: "true"
-  PREFLIGHT_SHELLCHECK: "true"
+  PREFLIGHT_SHELLCHECK: "false"
   PREFLIGHT_YAMLLINT: "true"
   PREFLIGHT_ESLINT: "true"
   PREFLIGHT_STYLELINT: "false"
