--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "mocha --exit"
   },
   "dependencies": {
