--- a/web.config
+++ b/web.config
@@ -1,40 +1,13 @@
 <configuration>
     <system.webServer>
         <handlers>
-          <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+            <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
         </handlers>
-        <iisnode      
-          node_env="%node_env%"
-          nodeProcessCountPerApplication="1"
-          maxConcurrentRequestsPerProcess="1024"
-          maxNamedPipeConnectionRetry="100"
-          namedPipeConnectionRetryDelay="250"      
-          maxNamedPipeConnectionPoolSize="512"
-          maxNamedPipePooledConnectionAge="30000"
-          asyncCompletionThreadCount="0"
-          initialRequestBufferSize="4096"
-          maxRequestBufferSize="65536"
-          watchedFiles="*.js;iisnode.yml"
-          uncFileChangesPollingInterval="5000"      
-          gracefulShutdownTimeout="60000"
-          loggingEnabled="true"
-          logDirectory="iisnode"
-          debuggingEnabled="false"
-          debugHeaderEnabled="false"
-          debuggerPortRange="5058-6058"
-          debuggerPathSegment="debug"
-          maxLogFileSizeInKB="128"
-          maxTotalLogFileSizeInKB="1024"
-          maxLogFiles="20"
-          devErrorsEnabled="false"
-          flushResponse="false"      
-          enableXFF="false"
-          promoteServerVars=""
-          configOverrides="iisnode.yml" />
+        <iisnode node_env="%node_env%" nodeProcessCountPerApplication="1" maxConcurrentRequestsPerProcess="1024" maxNamedPipeConnectionRetry="100" namedPipeConnectionRetryDelay="250" maxNamedPipeConnectionPoolSize="512" maxNamedPipePooledConnectionAge="30000" asyncCompletionThreadCount="0" initialRequestBufferSize="4096" maxRequestBufferSize="65536" watchedFiles="*.js;iisnode.yml" uncFileChangesPollingInterval="5000" gracefulShutdownTimeout="60000" loggingEnabled="true" logDirectory="iisnode" debuggingEnabled="false" debugHeaderEnabled="false" debuggerPortRange="5058-6058" debuggerPathSegment="debug" maxLogFileSizeInKB="128" maxTotalLogFileSizeInKB="1024" maxLogFiles="20" devErrorsEnabled="false" flushResponse="false" enableXFF="false" promoteServerVars="" configOverrides="iisnode.yml" />
         <rewrite>
             <rules>
-                <rule name="sendToNode" enabled="true">
-                    <match url"/*" />
+                <rule name="sendToNode">
+                    <match url="/*" />
                     <action type="Rewrite" url="server.js" />
                 </rule>
             </rules>
