:hammer: Update to app

--- a/web.config
+++ b/web.config
@@ -8,7 +8,7 @@
             <rules>
                 <rule name="app">
                     <match url="app/*" />
-                    <action type="Rewrite" url="public/app/index.html" />
+                    <action type="Rewrite" url="app/index.html" />
                 </rule>
                 <rule name="api">
                     <match url="api/*" />
